5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4374/executions/1577_1559.log
== TEST (2019-03-21 18:46:55) 
-- CODE:
frase = ""
print(.upper ("Ada Lovelace foi a primeira programadora da historia.")frase.???)
-- ERROR:
File "XXXX", line 2
    print(.upper ("Ada Lovelace foi a primeira programadora da historia.")frase.???)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:51:02) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(Ada Lovelace foi a primeira programadora da historia.upper)
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia.upper)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:51:20) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(Ada Lovelace foi a primeira programadora da historia..upper)
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia..upper)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:51:40) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(Ada Lovelace foi a primeira programadora da historia.(.upper))
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia.(.upper))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:00:50) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(.upper"Ada Lovelace foi a primeira programadora da historia")
-- ERROR:
File "XXXX", line 2
    print(.upper"Ada Lovelace foi a primeira programadora da historia")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:01:01) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(.upper "Ada Lovelace foi a primeira programadora da historia")
-- ERROR:
File "XXXX", line 2
    print(.upper "Ada Lovelace foi a primeira programadora da historia")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:01:22) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(.upper(frase))
-- ERROR:
File "XXXX", line 2
    print(.upper(frase))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:03:52) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:04:00) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.163947
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
